Convert to images.sbentleyart.com

--- a/src/components/bio/bio.module.css
+++ b/src/components/bio/bio.module.css
@@ -2,7 +2,7 @@
   margin-top: 16px;
   width: 100%;
   background-color: black;
-  background-image: url("http://www.sbentleyart.com/images/banner-image.jpg");
+  background-image: url("http://images.sbentleyart.com/images/banner-image.jpg");
   background-repeat: no-repeat;
   background-size: cover;
 }
